Spent some time modifying the new TripHashMap classes so that there were javadocs and I managed to remove most of the warnings.