@@ -1,7 +1,18 @@
 package com.tripcostcalculator.model;
 
+import android.annotation.SuppressLint;
 import java.util.*;
 
+// -------------------------------------------------------------------------
+/**
+ *  We use hash maps for unimplemented/unimplementable functionality
+ *  (e.g., turn by turn navigation in Google Maps api)
+ *
+ *  @author Gareth Griffith (gareth00)
+ *  @author Taylor Smock (tsmock)
+ *  @version Apr 30, 2013
+ */
+@SuppressLint("DefaultLocale")
 public class TripHashMap
 {
 //    public static void main(String args[])
@@ -11,6 +22,10 @@ public class TripHashMap
 //        System.out.println(addressMap("1755 Ginger Ln Blacksburg VA"));
 //    }
 
+    // ----------------------------------------------------------
+    /**
+     * Create a new TripHashMap object.
+     */
     public TripHashMap()
     {
         //Nothing to implement
@@ -19,31 +34,31 @@ public class TripHashMap
 
     // ----------------------------------------------------------
     /**
-     * Place a description of your method here.
-     * @param vehicle
-     * @return
+     * Vehicle map to get MPG.
+     * @param vehicle The vehicle string to find
+     * @return The vehicle's mpg
      */
     public String vehicleMap(String vehicle)
     {
         HashMap<String, Double> map = new HashMap<String, Double>();
-        map.put("2013 honda accord", new Double(30));
-        map.put("2013 toyota camry", new Double(28));
-        map.put("2013 toyota corolla", new Double(30));
-        map.put("2013 honda civic", new Double(32));
-        map.put("2013 ford taurus", new Double(21));
-        map.put("2013 ford f150", new Double(17));
-        map.put("2012 audi a6", new Double(21));
+        map.put("2013 honda accord", Double.valueOf(30));
+        map.put("2013 toyota camry", Double.valueOf(28));
+        map.put("2013 toyota corolla", Double.valueOf(30));
+        map.put("2013 honda civic", Double.valueOf(32));
+        map.put("2013 ford taurus", Double.valueOf(21));
+        map.put("2013 ford f150", Double.valueOf(17));
+        map.put("2012 audi a6", Double.valueOf(21));
 
-        vehicle = vehicle.toLowerCase();
-        return map.get(vehicle).toString();
+        String vehicle2 = vehicle.toLowerCase();
+        return map.get(vehicle2).toString();
     }
 
 
     // ----------------------------------------------------------
     /**
-     * Place a description of your method here.
-     * @param address
-     * @return
+     * This is the map for addresses
+     * @param address The address for which we are getting lat-long
+     * @return lat-long for the address
      */
     public String addressMap(String address)
     {
@@ -51,7 +66,7 @@ public class TripHashMap
         map.put("1755 ginger ln blacksburg va", "37.2412,-80.4515");
         map.put("1600 pennsylvania ave washington dc", "38.897096,-77.036545");
 
-        address = address.toLowerCase();
-        return map.get(address).toString();
+        String address2 = address.toLowerCase();
+        return map.get(address2).toString();
     }
 }
